@@ -21,7 +21,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - June 14, 2003</p>
+<p>June 14, 2002 - June 17, 2003</p>
 </center>
 
 <hr size=2 noshade>
