@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2003.06.14
-.TH TUXPAINT 1 "14 Jun 2003" "0.9.11" "Tux Paint"
+.\" tuxpaint.1 - 2003.06.17
+.TH TUXPAINT 1 "17 Jun 2003" "0.9.11" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
